--- a/Resources/DesktopModules/Admin/Dnn.PersonaBar/Modules/Dnn.SiteSettings/App_LocalResources/sitesettings.nl-NL.resx
+++ b/Resources/DesktopModules/Admin/Dnn.PersonaBar/Modules/Dnn.SiteSettings/App_LocalResources/sitesettings.nl-NL.resx
@@ -1057,7 +1057,7 @@
     <value>Bronbestand</value>
   </data>
   <data name="ResourceFileVerifier.Text" xml:space="preserve">
-    <value>Bronbestand Controleur</value>
+    <value>Bronbestand controleur</value>
   </data>
   <data name="ResourceFolder.Text" xml:space="preserve">
     <value>Bronmap</value>
