Fix typo in ModuleSettings Dutch localization

--- a/Resources/admin/Modules/App_LocalResources/ModuleSettings.ascx.nl-NL.resx
+++ b/Resources/admin/Modules/App_LocalResources/ModuleSettings.ascx.nl-NL.resx
@@ -136,7 +136,7 @@
     <value>Pagina</value>
   </data>
   <data name="PageSettings.Text" xml:space="preserve">
-    <value>Pagina Iinstellingen</value>
+    <value>Pagina instellingen</value>
   </data>
   <data name="Permissions.Text" xml:space="preserve">
     <value>Machtigingen</value>
